--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,1 +1,107 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Variáveis com cores da imagem */
+$yellow: #f9e100;
+$blue: #0048ff;
+$black: #000000;
+$white: #ffffff;
+
+/* Importação do Bootstrap */
+@import 'bootstrap/scss/bootstrap';
+
+/* Reset e estilos base */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  font-family: 'Roboto', 'Helvetica Neue', sans-serif;
+  color: $black;
+}
+
+a {
+  text-decoration: none;
+  color: $blue;
+  
+  &:hover {
+    color: darken($blue, 10%);
+  }
+}
+
+/* Sobrescrever estilos do Bootstrap */
+.btn-primary {
+  background-color: $yellow;
+  border-color: $yellow;
+  color: $black;
+  
+  &:hover, &:focus {
+    background-color: darken($yellow, 10%);
+    border-color: darken($yellow, 10%);
+    color: $black;
+  }
+}
+
+.btn-secondary {
+  background-color: $blue;
+  border-color: $blue;
+  
+  &:hover, &:focus {
+    background-color: darken($blue, 10%);
+    border-color: darken($blue, 10%);
+  }
+}
+
+.form-control:focus {
+  border-color: $yellow;
+  box-shadow: 0 0 0 0.25rem rgba($yellow, 0.25);
+}
+
+/* Tipografia */
+h1, h2, h3, h4, h5, h6 {
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.section-title {
+  margin-bottom: 2rem;
+  position: relative;
+  
+  &::after {
+    content: '';
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: $yellow;
+    margin-top: 0.5rem;
+  }
+}
+
+/* Utilitários */
+.bg-primary-custom {
+  background-color: $yellow !important;
+}
+
+.bg-secondary-custom {
+  background-color: $blue !important;
+}
+
+.text-primary-custom {
+  color: $yellow !important;
+}
+
+.text-secondary-custom {
+  color: $blue !important;
+}
+
+/* Animações */
+.fade-in {
+  animation: fadeIn 0.5s ease-in;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
