feat: :fire: Várias alterações

--- a/frontend/src/app/components/pages/contact/contact.component.html
+++ b/frontend/src/app/components/pages/contact/contact.component.html
@@ -42,7 +42,7 @@
                     <i class="fa fa-envelope"></i>
                   </div>
                   <h3>Email</h3>
-                  <p>contato@informacaodeverdade.com.br</p>
+                  <p>contato&#64;informacaodeverdade.com.br</p>
                 </div>
               </div>
               <div class="col-md-6 mb-4">
