fix: :bug: Correções

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -177,20 +177,8 @@
   }
 </style>
 
-<app-header></app-header>
-
-<main class="main-content">
-  <div class="container py-4">
+<div class="app-container">
+  <div class="main-content">
     <router-outlet></router-outlet>
   </div>
-</main>
-
-<app-footer></app-footer>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
+</div>
